--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -143,7 +143,7 @@ ga('send', 'pageview');
 
 <!-- Categories Jumbotron
 ================================================== -->
-<div class="jumbotron fortags">
+<!-- <div class="jumbotron fortags">
 	<div class="d-md-flex h-100">
 		<div class="col-md-4 transpdark align-self-center text-center h-100">
             <div class="d-md-flex align-items-center justify-content-center h-100">
@@ -165,6 +165,7 @@ ga('send', 'pageview');
 		</div>
 	</div>
 </div>
+	-->
 
 <!-- Begin Footer
 ================================================== -->
