--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
 
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 
+<meta name="google-site-verification" content="_NS7-4gsvcxb6m-8RjiWULKUvCOs04ruDgNYjjwRIcc" />	
 </head>
 
 {% if jekyll.environment == 'production' %}
