--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,28 +37,7 @@ ga('send', 'pageview');
 <body class="{{layout}}">
 
 
-	<!-- Breadcrumb Blogger by igniel.com -->
-<script type='application/ld+json'>{
-  "@context": "https://schema.org",
-  "@type": "BreadcrumbList",
-  "itemListElement": [
-    {
-      "@type": "ListItem",
-      "position": 1,
-      "name": "Home",
-      "item": "<data:blog.homepageUrl.canonical/>"
-    <b:if cond='!data:post.labels'>}<b:else/>},<b:loop index='i' values='data:post.labels' var='label'>
-    {
-      "@type": "ListItem",
-      "position": <b:with value='data:i + 2' var='num'><b:eval expr='data:num'/></b:with>,
-      "name": "<data:label.name/>",
-      "item": "<data:label.url.canonical/>"
-      <b:if cond='data:post.labels.size != data:i + 1'>},<b:else/>}</b:if></b:loop></b:if>
-  ]
-}</script>
-
-	<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","url":"<data:blog.homepageUrl/>","potentialAction":{"@type":"SearchAction","target":"<data:blog.searchUrl/>?q={search_term_string}","query-input":"required name=search_term_string"}}</script>
-
+	
 
 
 
@@ -98,7 +77,7 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">Blog</a>
+                <a class="nav-link" href="{{ site.baseurl }}">Home</a>
                 </li>
 
                 <li class="nav-item">
