--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,7 @@ ga('send', 'pageview');
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
+                <a class="nav-link" href="{{ site.baseurl }}/terms-and-conditions">Terms and Conditions</a>
                 </li>
 
 		    <br />
