--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,6 +83,10 @@ ga('send', 'pageview');
                 <li class="nav-item">
                 <a class="nav-link" href="{{ site.baseurl }}/terms-and-conditions">Terms and Conditions</a>
                 </li>
+		    
+		    <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/privacy-policy">Privacy Policy</a>
+                </li>
 
 		    <br />
 
