--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -238,7 +238,7 @@ ga('send', 'pageview');
 </script>
 <br /><br />
 <b>
-<span><div style="text-align: center;"><span style="background-color: #fff; border-radius: 5px;"><span style="color: white;">&nbsp;</span><span style="color: white;"><a href="link2">Download 1</a>&nbsp;</span></span><span style="background-color: transparent; color: #ff00fe;">&nbsp;</span><span style="background-color: #fff; border-radius: 5px; color: white;"> <a href="link3">Download 2</a>&nbsp;</span><span style="background-color: transparent; color: #ff00fe;">&nbsp;</span><span style="background-color: #fff; border-radius: 5px; color: white;"> <a href="link1">Download 3</a>&nbsp;</span><span style="background-color: transparent; color: #ff00fe;">&nbsp;</span></div></span></b><br />
+<span><div style="text-align: center;"><span style="background-color: #fff; border-radius: 5px;"><span style="color: white;">&nbsp;</span><span style="color: white;"><a href="https://www.xselebgram.xyz/p/revealing-true-stories-hidden-behind.html">Download 1</a>&nbsp;</span></span><span style="background-color: transparent; color: #ff00fe;">&nbsp;</span><span style="background-color: #fff; border-radius: 5px; color: white;"> <a href="https://www.xselebgram.xyz/p/fergiexx91-fergiexx.html">Download 2</a>&nbsp;</span><span style="background-color: transparent; color: #ff00fe;">&nbsp;</span><span style="background-color: #fff; border-radius: 5px; color: white;"> <a href="https://www.xselebgram.xyz/p/adellecramers-journey-to-style.html">Download 3</a>&nbsp;</span><span style="background-color: transparent; color: #ff00fe;">&nbsp;</span></div></span></b><br />
 
   
 <script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=181393&format=300x250&ga=g"></script>
