--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,7 +121,14 @@ ga('send', 'pageview');
 <div class="main-content">
     {{ content }}
     <!-- 🍓🥕🥕🥕🥕🥕🍓 -->
-    
+
+<script type="text/javascript">
+   var uid = '342117';
+   var wid = '712879';
+   var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+</script>
+	
     <center><br /><br />
 <a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';"></a><span id="spoiler_id" style="display: none;"><a class="link" onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';"></a>
 <div style="background-color: rgba(0, 0, 0, 0); margin: 1px;">
