--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -143,8 +143,8 @@ function bwstocShow() {
 //]]>
 </script>
 <noscript><style media='all' type='text/css'>#bwstocwrap,.bwstoc{display:none !important;visibility:hidden !important;width:0 !important;height:0 !important;}</style></noscript>
-<br />
-<div id='post-toc'><br />
+
+<div id='post-toc'>
 
 
 
