--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11900,7 +11900,8 @@ POPULAR Magazine Indonesia	Bluebella Lingerie
 
 <!-- Categories Jumbotron
 ================================================== -->
-<!-- <div class="jumbotron fortags">
+<center style="height:1px; overflow:auto;" >
+	<div class="jumbotron fortags">
 	<div class="d-md-flex h-100">
 		<div class="col-md-4 transpdark align-self-center text-center h-100">
             <div class="d-md-flex align-items-center justify-content-center h-100">
@@ -11921,8 +11922,8 @@ POPULAR Magazine Indonesia	Bluebella Lingerie
             {% assign categories_list = nil %}
 		</div>
 	</div>
-</div>
-	-->
+	</div>
+	
 
 <!-- Begin Footer
 ================================================== -->
