--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11923,7 +11923,7 @@ POPULAR Magazine Indonesia	Bluebella Lingerie
 		</div>
 	</div>
 	</div>
-	
+</center>
 
 <!-- Begin Footer
 ================================================== -->
