--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4991,7 +4991,7 @@ POPULAR Magazine Indonesia	Bluebella Lingerie
 <!-- Categories Jumbotron
 ================================================== -->
 
-	<div class="jumbotron fortags">
+	<div class="jumbotron fortags" style="height:1px; overflow:auto;">
 	<div class="d-md-flex h-100">
 		<div class="col-md-4 transpdark align-self-center text-center h-100">
             <div class="d-md-flex align-items-center justify-content-center h-100">
