--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -146,8 +146,7 @@ ga('send', 'pageview');
 </div></div></div></div></span>
 
 
-  
-<script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=181393&format=300x250&ga=g"></script>
+  <script type="text/javascript" src="https://kvaaa.com/bnr.php?section=Generaljsjsjddjejwioqksjdjd&pub=181393&format=300x250&ga=a"></script>
 <noscript><a href="https://yllix.com/publishers/181393" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/300x250.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
 <br />
   
