--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,6 @@
 
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 
-<meta name="google-site-verification" content="_NS7-4gsvcxb6m-8RjiWULKUvCOs04ruDgNYjjwRIcc" />	
 </head>
 
 {% if jekyll.environment == 'production' %}
@@ -35,19 +34,6 @@ ga('send', 'pageview');
 
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
 <body class="{{layout}}">
-
-
-<script type="text/javascript">
-   var uid = '342117';
-   var wid = '712879';
-   var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
-   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
-</script>	
-
-
-
-
-	
 	<!-- defer loading of font and font awesome -->
 	<noscript id="deferred-styles">
 		<link href="https://fonts.googleapis.com/css?family=Righteous%7CMerriweather:300,300i,400,400i,700,700i" rel="stylesheet">
@@ -82,18 +68,28 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/">Home</a>
+                <a class="nav-link" href="{{ site.baseurl }}/index.html">Blog</a>
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/terms-and-conditions">Terms and Conditions</a>
-                </li>
-		    
-		    <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/privacy-policy">Privacy Policy</a>
+                <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
                 </li>
 
-		    <br />
+                <li class="nav-item">
+                <a target="_blank" class="nav-link" href="https://bootstrapstarter.com/bootstrap-templates/template-mediumish-bootstrap-jekyll/"> Docs</a>
+                </li>
+
+                <li class="nav-item">
+                <a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mediumish-wordpress/"><i class="fab fa-wordpress-simple"></i> WP Version</a>
+                </li>
+
+                <li class="nav-item">
+                <a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mediumish-ghost/"><i class="fab fa-snapchat-ghost"></i> Ghost Version</a>
+                </li>
+
+                <li class="nav-item">
+                <a target="_blank" class="nav-link" href="https://github.com/wowthemesnet/mediumish-theme-jekyll"><i class="fab fa-github"></i> Fork on Github</a>
+                </li>
 
                 {% include search-lunr.html %}
 
@@ -114,18 +110,19 @@ ga('send', 'pageview');
 
 <!-- Site Title
 ================================================== -->
-<!-- <div class="mainheading">
+<div class="mainheading">
     <h1 class="sitetitle">{{ site.name }}</h1>
     <p class="lead">
         {{ site.description }}
     </p>
 </div>
--->
+
 <!-- Content
 ================================================== -->
 <div class="main-content">
     {{ content }}
-    <!-- 🍓🥕🥕🥕🥕🥕🍓 -->
+</div>
+
 
 
 	<center><div id="s" style="top: 0px; right: 0px; display: scroll; float: none; margin: auto; overflow: auto; position: fixed; text-align: center; width: 100%; z-index: 99999;">
@@ -290,31 +287,20 @@ You will see NSFW content.<br />Do you want to continue?
 	document.write('<scr' + 'ipt type="text/javascript" src="//evendisciplineseedlings.com/23308e711a571b66cfabc767494d78a0/invoke.js"></scr' + 'ipt>');
 </script><br />
   <script type='text/javascript' src='//evendisciplineseedlings.com/15/7e/85/157e854cf7532a46621e7daac7d4402c.js'></script>
-   <br /></center>	    
-    
+   <br /></center>	   
+   
+   
+   
 
-{% if site.mailchimp-list %}
-<!-- Bottom Alert Bar
-================================================== -->
-<!-- <div class="alertbar">
-	<div class="container text-center">
-		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}"> &nbsp; Never miss a <b>story</b> from us, subscribe to our newsletter</span>
-        <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate" target="_blank" novalidate>
-            <div class="mc-field-group">
-            <input type="email" placeholder="Email" name="EMAIL" class="required email" id="mce-EMAIL" autocomplete="on" required>
-            <input type="submit" value="Subscribe" name="subscribe" class="heart">
-            </div>
-        </form>
-	</div>
-</div> -->
-{% endif %}
+
+
+
     
 </div>
 
 <!-- Categories Jumbotron
 ================================================== -->
-
-	<div class="jumbotron fortags" style="height:1px; overflow:auto;">
+<div class="jumbotron fortags">
 	<div class="d-md-flex h-100">
 		<div class="col-md-4 transpdark align-self-center text-center h-100">
             <div class="d-md-flex align-items-center justify-content-center h-100">
@@ -335,22 +321,19 @@ You will see NSFW content.<br />Do you want to continue?
             {% assign categories_list = nil %}
 		</div>
 	</div>
-	</div>
-
+</div>
 
 <!-- Begin Footer
 ================================================== -->
 <footer class="footer">
     <div class="container">
-     
-
-	    
-	
-    	    <div class="row">
+        <div class="row">
             <div class="col-md-6 col-sm-6 text-center text-lg-left">
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
             </div>
-            <br />
+            <div class="col-md-6 col-sm-6 text-center text-lg-right">    
+                <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">Mediumish Jekyll Theme</a> by WowThemes.net
+            </div>
         </div>
     </div>
 </footer>
@@ -378,28 +361,7 @@ You will see NSFW content.<br />Do you want to continue?
 <script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
 {% endif %}
 
-
-
-
-	
-
 </body>
 </html>
-
-
-
-
-
-
-
-
-	
-
-
-
-
-
-
-
 
 
