--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -108,14 +108,28 @@ ga('send', 'pageview');
 
 <div class="container">
 
-<!-- Site Title
-================================================== -->
-<div class="mainheading">
-    <h1 class="sitetitle">{{ site.name }}</h1>
-    <p class="lead">
-        {{ site.description }}
-    </p>
-</div>
+<!-- ploating start -->
+
+<center><div id="s" style="top: 0px; right: 0px; display: scroll; float: none; margin: auto; overflow: auto; position: fixed; text-align: center; width: 100%; z-index: 99999;">
+<div style="display: block; width: 100%; height: 3000px; margin: auto; background-color: #ff5000; overflow: auto; text-align: center;"><br /><center>
+<div style="padding: 15px;">
+<br /><span style="font-family: arial;"><span style="font-size: large;"><b><span style="color: #cc0000;">Warning</span><span style="color: red;"> ðŸ”ž</span></b><br /></span></span><span style="font-family: arial;"><span style="color: #fff; font-size: medium;"><b><br /></b>
+You will see NSFW content.<br />Do you want to continue?
+ </span>
+</span><div><span style="font-family: arial;"><br /></span></div>
+<div style="background-color: dodgerblue; border-radius: 3px; padding: 6px; text-align: center; width: 25%;"> <div><b>
+<a href="https://www.xselebgram.xyz/2024/" rel="noopener" target="_blank"><span style="color: white;">Yes</span></a></b></div></div>
+<br />
+<div style="background-color: red; border-radius: 3px; padding: 6px; text-align: center; width: 25%;"> <div><b>
+<a href="https://www.xselebgram.xyz/search/" rel="noopener" target="_blank"><span style="color: white;">No</span></a></b></div></div></div></center></div></div></center>
+
+
+
+
+
+<!-- ploating end -->
+
+	
 
 <!-- Content
 ================================================== -->
