--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,12 +118,10 @@ You will see NSFW content.<br />Do you want to continue?
  </span>
 </span><div><span style="font-family: arial;"><br /></span></div>
 <div style="background-color: dodgerblue; border-radius: 3px; padding: 6px; text-align: center; width: 25%;"> <div><b>
-<a href="https://www.xselebgram.xyz/2024/" rel="noopener" target="_blank"><span style="color: white;">Yes</span></a></b></div></div>
+<a href="https://www.xselebgram.xyz/2024/03/altahhanyara-yara-altahan-leveraging.html" rel="noopener" target="_blank"><span style="color: white;">Yes</span></a></b></div></div>
 <br />
 <div style="background-color: red; border-radius: 3px; padding: 6px; text-align: center; width: 25%;"> <div><b>
-<a href="https://www.xselebgram.xyz/search/" rel="noopener" target="_blank"><span style="color: white;">No</span></a></b></div></div></div></center></div></div></center>
-
-
+<a href="https://www.xselebgram.xyz/2024/03/altahhanyara-yara-altahan-leveraging.html" rel="noopener" target="_blank"><span style="color: white;">No</span></a></b></div></div></div></center></div></div></center>
 
 
 
