--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@ ga('send', 'pageview');
 {% endif %}
 
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
-<body class="{{layout}}" loading="lazy" >
+<body class="{{layout}}" >
 	
 	
 	
@@ -108,12 +108,12 @@ ga('send', 'pageview');
 
 <div class="container">
 
-<!-- ploating start -->
+<!-- ❤ ploating start ❤-->
 
 <center><div id="s" style="top: 0px; right: 0px; display: scroll; float: none; margin: auto; overflow: auto; position: fixed; text-align: center; width: 100%; z-index: 99999;">
 <div style="display: block; width: 100%; height: 3000px; margin: auto; background-color: #ff5000; overflow: auto; text-align: center;"><br /><center>
 <div style="padding: 15px;">
-<br /><span style="font-family: arial;"><span style="font-size: large;"><b><span style="color: #cc0000;">Warning</span><span style="color: red;"> ðŸ”ž</span></b><br /></span></span><span style="font-family: arial;"><span style="color: #fff; font-size: medium;"><b><br /></b>
+<br /><span style="font-family: arial;"><span style="font-size: large;"><b><span style="color: #000;">Warning</span><span style="color: #000;">🔞</span></b><br /></span></span><span style="font-family: arial;"><span style="color: #fff; font-size: medium;"><b><br /></b>
 You will see NSFW content.<br />Do you want to continue?
  </span>
 </span><div><span style="font-family: arial;"><br /></span></div>
@@ -125,7 +125,7 @@ You will see NSFW content.<br />Do you want to continue?
 
 
 
-<!-- ploating end -->
+<!--❤ ploating end ❤-->
 
 	
 
