--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -155,8 +155,8 @@ ga('send', 'pageview');
 <footer class="footer">
     <div class="container">
     
-        <center style="height:250px; overflow:auto;" >
-	    
+        <center style="height:60px; overflow:auto;" >
+	ads by adsterra<br />    
   
   <script type="text/javascript">
 	atOptions = {
