--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,26 @@ ga('send', 'pageview');
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
 <body class="{{layout}}" >
 	
-	
+	<script type='text/javascript'>
+        $(document).ready(function() {$(&#39;img#closed&#39;).click(function(){$(&#39;#btm_banner&#39;).hide(90);});});
+</script>
+        <!--start: floating ads-->
+        <div id='floatads' style='width:100%;margin:auto; text-align:center;float:none;overflow:hidden; display:scroll;position:fixed; top:30%;z-index:9999'>
+         <div><a id='close-floatads' onclick='document.getElementById(&apos;floatads&apos;).style.display = &apos;none&apos;;' style='cursor:pointer;'><img alt='close' src='https://3.bp.blogspot.com/-ZZSacDHLWlM/VhvlKTMjbLI/AAAAAAAAF2M/UDzU4rrvcaI/s1600/btn_close.gif' title='close button'/></a></div>
+    <div style='text-align:center;display:block;max-width:728px;height:auto;overflow:hidden;margin:auto'>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'ab1c64f31d3f0bab7109e9dda1c2db72',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//bilateralgodmother.com/ab1c64f31d3f0bab7109e9dda1c2db72/invoke.js"></scr' + 'ipt>');
+</script>
+
+        </div>
+ </div><!--end: floating ads-->
 	
 	<script type="text/javascript">
    var uid = '342117';
@@ -147,7 +166,70 @@ ga('send', 'pageview');
 		</div>
 	</div>
 </div>
-
+<center style="height:70; overflow:auto;" >
+ads by Adsterra<br />
+<script type="text/javascript">
+	atOptions = {
+		'key' : '7096299bdb00e89c211a1f5111792146',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//evendisciplineseedlings.com/7096299bdb00e89c211a1f5111792146/invoke.js"></scr' + 'ipt>');
+</script><br />
+<script type='text/javascript' src='//evendisciplineseedlings.com/79/90/a2/7990a251df927b37ce9eb453d6ae66b1.js'></script>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'bed6dc3f10b0c8755642b193c0b92f22',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//evendisciplineseedlings.com/bed6dc3f10b0c8755642b193c0b92f22/invoke.js"></scr' + 'ipt>');
+</script>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'caa42a9cc3d6bb2d70cdd5e65ab9ce77',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//evendisciplineseedlings.com/caa42a9cc3d6bb2d70cdd5e65ab9ce77/invoke.js"></scr' + 'ipt>');
+</script>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '04c92046d02db081b383b91a7056425f',
+		'format' : 'iframe',
+		'height' : 600,
+		'width' : 160,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//evendisciplineseedlings.com/04c92046d02db081b383b91a7056425f/invoke.js"></scr' + 'ipt>');
+</script>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'f4319a55c4ac85ebac8a19619bc316c4',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//evendisciplineseedlings.com/f4319a55c4ac85ebac8a19619bc316c4/invoke.js"></scr' + 'ipt>');
+</script>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '312dcd8c983e4060a24e6d0d4a1b58e8',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//evendisciplineseedlings.com/312dcd8c983e4060a24e6d0d4a1b58e8/invoke.js"></scr' + 'ipt>');
+</script>
+</center>
     
 
 <!-- Begin Footer
@@ -155,140 +237,7 @@ ga('send', 'pageview');
 <footer class="footer">
     <div class="container">
     
-        <center style="height:70px; overflow:auto;" >
-	ads by adsterra<br />    
-  
-  <script type="text/javascript">
-	atOptions = {
-		'key' : 'e2179ecb8363c7ec295913136ac20ce2',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//scheduleginnarcotic.com/e2179ecb8363c7ec295913136ac20ce2/invoke.js"></scr' + 'ipt>');
-</script>
-  <script type='text/javascript' src='//scheduleginnarcotic.com/4d/2d/b3/4d2db33c5702ad73029bfb36f90f5ef8.js'></script>
-  
-  <br />
-  <script type="text/javascript">
-	atOptions = {
-		'key' : '89b3cd39a4b4b54614534f8b38b1f9c7',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//scheduleginnarcotic.com/89b3cd39a4b4b54614534f8b38b1f9c7/invoke.js"></scr' + 'ipt>');
-</script>
-  <br />
-  
-  
-  <script type="text/javascript">
-	atOptions = {
-		'key' : 'ee15edc926c1c2a8bc887b5d15b5bac2',
-		'format' : 'iframe',
-		'height' : 300,
-		'width' : 160,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//scheduleginnarcotic.com/ee15edc926c1c2a8bc887b5d15b5bac2/invoke.js"></scr' + 'ipt>');
-</script><br />
-  
-  <script type="text/javascript">
-	atOptions = {
-		'key' : 'bd5793a10a87e55722f3c9856f9609a0',
-		'format' : 'iframe',
-		'height' : 600,
-		'width' : 160,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//scheduleginnarcotic.com/bd5793a10a87e55722f3c9856f9609a0/invoke.js"></scr' + 'ipt>');
-</script>
-  <br /><script type="text/javascript">
-	atOptions = {
-		'key' : '0f64a2ddb922bc0a249fe53f25f405d3',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//scheduleginnarcotic.com/0f64a2ddb922bc0a249fe53f25f405d3/invoke.js"></scr' + 'ipt>');
-</script><br />
-  <script type="text/javascript">
-	atOptions = {
-		'key' : 'ea933d5a2485300c0119f77463dd8606',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//scheduleginnarcotic.com/ea933d5a2485300c0119f77463dd8606/invoke.js"></scr' + 'ipt>');
-</script><br />
-  <script type="text/javascript">
-	atOptions = {
-		'key' : 'a7976f8e34702b9c7108017e2c8884cb',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//evendisciplineseedlings.com/a7976f8e34702b9c7108017e2c8884cb/invoke.js"></scr' + 'ipt>');
-</script><br />
-  <script type="text/javascript">
-	atOptions = {
-		'key' : '27050d2fa600af0c6cf41877f5f45e97',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//evendisciplineseedlings.com/27050d2fa600af0c6cf41877f5f45e97/invoke.js"></scr' + 'ipt>');
-</script><br />
-  <script type="text/javascript">
-	atOptions = {
-		'key' : '40d177aa243a8e2d27a287885cffe045',
-		'format' : 'iframe',
-		'height' : 600,
-		'width' : 160,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//evendisciplineseedlings.com/40d177aa243a8e2d27a287885cffe045/invoke.js"></scr' + 'ipt>');
-</script><br />
-  <script type="text/javascript">
-	atOptions = {
-		'key' : 'f6260f18d62613055b85d8827c55f2ab',
-		'format' : 'iframe',
-		'height' : 300,
-		'width' : 160,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//evendisciplineseedlings.com/f6260f18d62613055b85d8827c55f2ab/invoke.js"></scr' + 'ipt>');
-</script><br />
-  <script type="text/javascript">
-	atOptions = {
-		'key' : '4ce87fa5c43f3abd6d38cbe07ecfe0c8',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//evendisciplineseedlings.com/4ce87fa5c43f3abd6d38cbe07ecfe0c8/invoke.js"></scr' + 'ipt>');
-</script>
-  <br /><script type="text/javascript">
-	atOptions = {
-		'key' : '23308e711a571b66cfabc767494d78a0',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//evendisciplineseedlings.com/23308e711a571b66cfabc767494d78a0/invoke.js"></scr' + 'ipt>');
-</script><br />
-  <script type='text/javascript' src='//evendisciplineseedlings.com/15/7e/85/157e854cf7532a46621e7daac7d4402c.js'></script>
-   <br /></center>	    
-   
-    
+
     
         <div class="row">
             <div class="col-md-6 col-sm-6 text-center text-lg-left">
@@ -324,8 +273,4 @@ ga('send', 'pageview');
 
 </body>
 </html>
-
-
-
-
 
