--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -166,7 +166,7 @@ ga('send', 'pageview');
 		</div>
 	</div>
 </div>
-<center style="height:70; overflow:auto;" >
+<center style="height:70px; overflow:auto;" >
 ads by Adsterra<br />
 <script type="text/javascript">
 	atOptions = {
