--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@ ga('send', 'pageview');
 <body class="{{layout}}" >
 
 	    <!-- mulai -->
-<div id='floatads' style='width:100%;margin:auto; text-align:center;float:none;overflow:hidden; display:scroll;position:fixed;right:0px; top:0%;z-index:9999;background-color:#fff;'>
+<div id='floatfh7654ads' style='width:100%;margin:auto; text-align:center;float:none;overflow:hidden; display:scroll;position:fixed;right:0px; top:0%;z-index:9999;background-color:#fff;'>
 
     <div style='text-align:center;display:block;max-width:728px;height:auto;overflow:hidden;margin:auto;background-color:#fff;'>
 
