--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,15 +86,15 @@ ga('send', 'pageview');
 //<![CDATA[
 function bwstoc() {
  var bwstoc = i = headinglength = getheading = 0;
- headinglength = document.getElementById("post-toc").querySelectorAll("h2, h3, h4, details").length;
+ headinglength = document.getElementById("post-toc").querySelectorAll(" details").length;
  if (headinglength > 1) { 
  // Hanya Tampil Jika Ditemukan Minimal 2 Heading
  for (i = 0; i < headinglength; i++) {
- getheading = document.getElementById("post-toc").querySelectorAll("h2, h3, h4, details")[i].textContent;
+ getheading = document.getElementById("post-toc").querySelectorAll("details")[i].textContent;
  var bws_1 = getheading.replace(/[^a-z0-9]/gi," ");
  var bws_2 = bws_1.trim();
  var getHeadUri = bws_2.replace(/s/g, "_");
- document.getElementById("post-toc").querySelectorAll("h2, h3, h4, details")[i].setAttribute("id", getHeadUri);
+ document.getElementById("post-toc").querySelectorAll("details")[i].setAttribute("id", getHeadUri);
  bwstoc = "<li><a href='#" + getHeadUri + "'>" + getheading + "</a></li>";
  document.getElementById("bwstoc").innerHTML += bwstoc;
  }
