--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,8 +51,8 @@ ga('send', 'pageview');
         $(document).ready(function() {$(&#39;img#closed&#39;).click(function(){$(&#39;#btm_banner&#39;).hide(90);});});
 </script>
         <!--start: floating ads-->
-        <div id='floatads' style='width:100%;margin:auto; text-align:center;float:none;overflow:hidden; display:scroll;position:fixed; top:30%;z-index:9999'>
-         <div><a id='close-floatads' onclick='document.getElementById(&apos;floatads&apos;).style.display = &apos;none&apos;;' style='cursor:pointer;'><img alt='close' src='https://3.bp.blogspot.com/-ZZSacDHLWlM/VhvlKTMjbLI/AAAAAAAAF2M/UDzU4rrvcaI/s1600/btn_close.gif' title='close button'/></a></div>
+        <div id='fl' style='width:100%;margin:auto; text-align:center;float:none;overflow:hidden; display:scroll;position:fixed; top:30%;z-index:9999'>
+         <div><a id='close-fl' onclick='document.getElementById(&apos;fl&apos;).style.display = &apos;none&apos;;' style='cursor:pointer;'><img alt='close' src='https://3.bp.blogspot.com/-ZZSacDHLWlM/VhvlKTMjbLI/AAAAAAAAF2M/UDzU4rrvcaI/s1600/btn_close.gif' title='close button'/></a></div>
     <div style='text-align:center;display:block;max-width:728px;height:auto;overflow:hidden;margin:auto'>
 <script type="text/javascript">
 	atOptions = {
@@ -63,6 +63,71 @@ ga('send', 'pageview');
 		'params' : {}
 	};
 	document.write('<scr' + 'ipt type="text/javascript" src="//bilateralgodmother.com/ab1c64f31d3f0bab7109e9dda1c2db72/invoke.js"></scr' + 'ipt>');
+</script>
+
+        </div>
+ </div><!--end: floating ads-->
+	<script type='text/javascript'>
+        $(document).ready(function() {$(&#39;img#closed&#39;).click(function(){$(&#39;#btm_banner&#39;).hide(90);});});
+</script>
+        <!--start: floating ads-->
+        <div id='floa22123tads' style='width:100%;margin:auto; text-align:center;float:none;overflow:hidden; display:scroll;position:fixed; top:30%;z-index:9999'>
+         <div><a id='close-floa22123tads' onclick='document.getElementById(&apos;floa22123tads&apos;).style.display = &apos;none&apos;;' style='cursor:pointer;'><img alt='close' src='https://3.bp.blogspot.com/-ZZSacDHLWlM/VhvlKTMjbLI/AAAAAAAAF2M/UDzU4rrvcaI/s1600/btn_close.gif' title='close button'/></a></div>
+    <div style='text-align:center;display:block;max-width:728px;height:auto;overflow:hidden;margin:auto'>
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : '3fa6216209084767c5d794f398950b73',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//scheduleginnarcotic.com/3fa6216209084767c5d794f398950b73/invoke.js"></scr' + 'ipt>');
+</script>
+
+        </div>
+ </div><!--end: floating ads-->
+<script type='text/javascript'>
+        $(document).ready(function() {$(&#39;img#closed&#39;).click(function(){$(&#39;#btm_banner&#39;).hide(90);});});
+</script>
+        <!--start: floating ads-->
+        <div id='floa2213tads' style='width:100%;margin:auto; text-align:center;float:none;overflow:hidden; display:scroll;position:fixed; top:30%;z-index:9999'>
+         <div><a id='close-floa2213tads' onclick='document.getElementById(&apos;floa2213tads&apos;).style.display = &apos;none&apos;;' style='cursor:pointer;'><img alt='close' src='https://3.bp.blogspot.com/-ZZSacDHLWlM/VhvlKTMjbLI/AAAAAAAAF2M/UDzU4rrvcaI/s1600/btn_close.gif' title='close button'/></a></div>
+    <div style='text-align:center;display:block;max-width:728px;height:auto;overflow:hidden;margin:auto'>
+
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : '76d83badbc00a7b58a041e25bbca8e3d',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//scheduleginnarcotic.com/76d83badbc00a7b58a041e25bbca8e3d/invoke.js"></scr' + 'ipt>');
+</script>
+
+        </div>
+ </div><!--end: floating ads-->
+<script type='text/javascript'>
+        $(document).ready(function() {$(&#39;img#closed&#39;).click(function(){$(&#39;#btm_banner&#39;).hide(90);});});
+</script>
+        <!--start: floating ads-->
+        <div id='floa223tads' style='width:100%;margin:auto; text-align:center;float:none;overflow:hidden; display:scroll;position:fixed; top:30%;z-index:9999'>
+         <div><a id='close-floa223tads' onclick='document.getElementById(&apos;floa223tads&apos;).style.display = &apos;none&apos;;' style='cursor:pointer;'><img alt='close' src='https://3.bp.blogspot.com/-ZZSacDHLWlM/VhvlKTMjbLI/AAAAAAAAF2M/UDzU4rrvcaI/s1600/btn_close.gif' title='close button'/></a></div>
+    <div style='text-align:center;display:block;max-width:728px;height:auto;overflow:hidden;margin:auto'>
+
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'ffe565c40a085fbe64d1c8d1730caeeb',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//scheduleginnarcotic.com/ffe565c40a085fbe64d1c8d1730caeeb/invoke.js"></scr' + 'ipt>');
 </script>
 
         </div>
