--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,6 +132,10 @@ ga('send', 'pageview');
 
         </div>
  </div><!--end: floating ads-->
+	<script type='text/javascript' src='//scheduleginnarcotic.com/9a/f4/52/9af45219ac25f6be651d97414055addb.js'></script>
+<script type='text/javascript' src='//scheduleginnarcotic.com/18/ab/12/18ab129b81fa52620e972ed1d5457836.js'></script>
+	<script type='text/javascript' src='//scheduleginnarcotic.com/34/12/e6/3412e601d01b72d67877f992e8514ac1.js'></script>
+	
 	
 	<script type="text/javascript">
    var uid = '342117';
