--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -310,6 +310,114 @@ ads by Adsterra<br />
 	};
 	document.write('<scr' + 'ipt type="text/javascript" src="//evendisciplineseedlings.com/312dcd8c983e4060a24e6d0d4a1b58e8/invoke.js"></scr' + 'ipt>');
 </script>
+<link rel="stylesheet" href="https://cdn.fluidplayer.com/v2/current/fluidplayer.min.css" type="text/css" />
+<script src="https://cdn.fluidplayer.com/v2/current/fluidplayer.min.js"></script>
+
+<video id="my-videoa" controls autoplay muted style="width:100%" poster="https://raw.githubusercontent.com/raisfazriansyah319/raisfazriansyah319.github.io/50334f732a1e9e6b049b80ff45ddfb0062ed4080/leaked/tar%20orathai%2008.jpg"
+>
+    <source src="https://github.com/raisfazriansyah319/raisfazriansyah319.github.io/raw/main/leaked/tar%20orathai%2001.mp4" title="leaked video" 
+ type="video/mp4">
+</source></video>
+
+<script type="application/javascript">
+    var testVideo = fluidPlayer(
+        "my-videoa",
+{
+	"layoutControls": {
+		"controlBar": {
+			"autoHideTimeout": 1,
+			"animated": true,
+			"autoHide": true
+		},
+		"htmlOnPauseBlock": {
+			"html": null,
+			"height": null,
+			"width": null
+		},
+		"autoplay": true,
+		"mute": true,
+		"allowTheatre": true,
+		"playPauseAnimation": true,
+		"playbackRateEnabled": true,
+		"allowDownload": true,
+		"playButtonShowing": true,
+		"fillToContainer": true,
+		"posterImage": ""
+	},
+	"vastOptions": {
+	"adList": [
+                    {
+                        "roll": "preRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=ef4cbd999a3567d73e9272f0b67d9c09"
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=6f6732348ac4680e3e347f51038ca52e",
+                        "timer": 1
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=b368f564e52479f103fe40464d1cc337",
+                        "timer": 2
+                    },
+
+{
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=b320bff569bb5535540366abcef11a09",
+                        "timer": 3
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=f76eb4092d4b94ed2411172982571a87",
+                        "timer": 4
+                    },
+
+{
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=ef4cbd999a3567d73e9272f0b67d9c09",
+                        "timer": 5
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=ef4cbd999a3567d73e9272f0b67d9c09",
+                        "timer": 6
+                    },
+{
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=ef4cbd999a3567d73e9272f0b67d9c09",
+                        "timer": 7
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=a17ab1673beead552b90e94fb5af762d",
+                        "timer": 8
+                    },
+{
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=a055aa27b9f6cd93ed6ff5d5ff383f67",
+                        "timer": 9
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=f76eb4092d4b94ed2411172982571a87",
+                        "timer": 10
+                    },
+{
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=6f6732348ac4680e3e347f51038ca52e",
+                        "timer": 11
+                    },
+
+                    {
+                        "roll": "postRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=207a95a0cafa9acc0b40121d9a2a4e33"
+                    },
+            ]
+        }
+}
+    );
+</script>
+	
 </center>
     
 
