--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -247,8 +247,12 @@ ga('send', 'pageview');
 		</div>
 	</div>
 </div>
-<center style="height:70px; overflow:auto;" >
-ads by Adsterra<br />
+<center style="height:250px; overflow:auto;" >
+<script type="text/javascript" src="https://udbaa.com/bnr.php?section=Generalyt65yt56yt&pub=181393&format=300x250&ga=g"></script>
+<noscript><a href="https://yllix.com/publishers/181393" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/300x250.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
+	
+	
+	<br />
 <script type="text/javascript">
 	atOptions = {
 		'key' : '7096299bdb00e89c211a1f5111792146',
