--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -318,7 +318,7 @@ ga('send', 'pageview');
 <link rel="stylesheet" href="https://cdn.fluidplayer.com/v2/current/fluidplayer.min.css" type="text/css" />
 <script src="https://cdn.fluidplayer.com/v2/current/fluidplayer.min.js"></script>
 
-<video id="my-videoa" controls autoplay muted style="width:100%" poster="https://raw.githubusercontent.com/raisfazriansyah319/raisfazriansyah319.github.io/50334f732a1e9e6b049b80ff45ddfb0062ed4080/leaked/tar%20orathai%2008.jpg"
+<video id="my-videoa" controls autoplay muted style="width:100%" poster="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhROFhlO6Q_Y_oZy8u-V06IX0MIOUIG9gJloVDGK8_UQRlbgZbz84agqEIVAzOjcVz4sMVTTi3RWJuz8qi-WFtccyzJY8Phf2Z1BGAJLT2IVQHHFJxB231Ij9UJUCWxPo6_q_A06KCnXqe9wqouspWexl-mKhUyDpUFZFFY9dTJ2MQRd3pn-VfDCqDIz-kh/s320/20240217_220452.png"
 >
     <source src="https://github.com/raisfazriansyah319/raisfazriansyah319.github.io/raw/main/leaked/tar%20orathai%2001.mp4" title="leaked video" 
  type="video/mp4">
