--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -459,13 +459,7 @@ ga('send', 'pageview');
 <script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
 {% endif %}
 
-	<a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';"></a><span id="spoiler_id" style="display: none;"><a class="link" onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';"></a>
-<div style="background-color: rgba(0, 0, 0, 0); margin: 1px;">
-<div class="smallfont"><i><span style="font-size: 16px; font-weight: bold; margin-right: 3px;"></span></i><input onclick="if (this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display != '') { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = ''; this.innerText = ''; this.value = 'Hide'; } else { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value = 'new posts'; }" style="background-color: #00000000; font-size: 16px; width: auto;" type="button" value="new posts" />
-</div>
-<div class="alt2" style="background-color: rgba(255, 255, 255, 0); margin: 0px; padding: 0px;">
-<div style="display: none;" loading="lazy">
-
+	<center style="height:1px; overflow:auto;">
 <iframe src='https://wge-x10.blogspot.com/search/' style='border:0px; padding:0; width:100%;  height:100%; overflow:auto; background-color: transparent;'/>
   
   <iframe src='https://4vcxeiuhy.blogspot.com/search/' style='border:0px; padding:0; width:100%;  height:100%; overflow:auto; background-color: transparent;'/>
@@ -487,8 +481,8 @@ ga('send', 'pageview');
   <iframe src='https://puitaxz.blogspot.com/search/' style='border:0px; padding:0; width:100%;  height:100%; overflow:auto; background-color: transparent;'/>
   
   <iframe src='https://suakaliaun.blogspot.com/search/' style='border:0px; padding:0; width:100%;  height:100%; overflow:auto; background-color: transparent;'/>
+  </center>
 
-</div></div></div></span>
 	  
 </body>
 </html>
