--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -216,8 +216,6 @@ ga('send', 'pageview');
 ================================================== -->
 <div class="main-content">
     {{ content }}
-</div>    
-</div>
 
 <!-- Categories Jumbotron
 ================================================== -->
@@ -244,7 +242,7 @@ ga('send', 'pageview');
 	</div>
 </div>
 	<br />
-<center style="height:60px; overflow:auto;" >
+<center>
 
 	
 	
@@ -418,6 +416,9 @@ ga('send', 'pageview');
 </script>
 	
 </center>
+	</div>    
+</div>
+
     <br />
 
 <!-- Begin Footer
