--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -247,7 +247,6 @@ ga('send', 'pageview');
 	
 	
 
-<script type='text/javascript' src='//evendisciplineseedlings.com/79/90/a2/7990a251df927b37ce9eb453d6ae66b1.js'></script>
 
 
 
@@ -272,6 +271,7 @@ ga('send', 'pageview');
         <div class="row">
             <div class="col-md-6 col-sm-6 text-center text-lg-left">
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
+		    <br />Email: adabunalima5@gmail.com
             </div>
             
         </div>
